refactor : 예외를 throw 하는 대신 try문으로 리펙토링